# asset-indexer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/asset_indexer/: __init__.py  __main__.py  cli.py  file_analyzer.py  file_scanner.py  models.py  report_writer.py
src/workspace_indexer/: __main__.py  cli.py  file_scanner.py
tests/: test_file_analyzer.py  test_file_scanner.py  test_report_writer.py
