[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-indexer"
version = "0.1.0"
description = "A CLI tool for indexing workspace files and generating reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RCN" }
]

[project.scripts]
workspace-indexer = "workspace_indexer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]