[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-indexer"
version = "0.1.0"
description = "A local-first CLI for indexing directories, analyzing file metadata, and generating inventory reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RedCipherNode" }
]

[project.scripts]
asset-indexer = "asset_indexer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]